# Process-Doctor

./: .env.example  .gitignore  BACKEND_INTEGRATION.md  IMPLEMENTATION_STATUS.md  PROJECT_STATEMENT.md  PROJECT_STRUCTURE.md  PR_CREATION_TROUBLESHOOTING.md  QUICK_START.md  README.md  SETUP_GUIDE.md  TREATMENT_FIXES_SUMMARY.md  docker-compose.yml
Bob Sessions/Precious/: bob_task_may-2-2026_6-51-27-pm.md  bob_task_may-2-2026_6-54-44-pm.md  bob_task_may-2-2026_7-57-42-pm.md
Bob Sessions/Yididiya/: bob_task_may-2-2026_12-43-40-pm.md  (+1 more)
backend/: Dockerfile  README.md  pyproject.toml  requirements.txt  run_dev.py
backend/app/: __init__.py  config.py  main.py  shared.py
backend/app/agents/: __init__.py  diagnoser.py  fixer.py  llm_client.py  pr_writer.py
backend/app/api/: analyze.py  fix.py  health.py  pr.py
backend/app/github/: __init__.py  client.py  pr_creator.py  runs.py  workflows.py
backend/app/orchestrate/: __init__.py  client.py
backend/app/pipeline/: __init__.py  ingestion.py  orchestrator.py  static_analysis.py  validation.py
backend/app/prompts/: diagnoser_system.md  fixer_system.md  pr_writer_system.md
backend/app/schemas/: __init__.py  analysis.py  api.py  fix.py  workflow.py
backend/data/: action_versions.json
backend/tests/: test_orchestrator.py  test_static_analysis.py
backend/tests/fixtures/: sample_workflow.yml
docs/: api-integration-guide.md  architecture.md  demo-script.md  frontend-backend-integration-plan.md  implementation-roadmap.md  prompts.md
frontend/: DELIVERABLES.md  README.md  package-lock.json  package.json
(+17 files in other folders)
